--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/blume_capel_model
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/blume_capel
 spring.datasource.username=${USERNAME_BANCO}
 spring.datasource.password=${SENHA_BANCO}
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.hibernate.ddl-auto=update
