--- a/web/package.json
+++ b/web/package.json
@@ -17,7 +17,8 @@
     "next": "14.1.3",
     "next-auth": "^4.24.7",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.0.1"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.2.22",
